Toimiva taustajärjestelmä. Logic.js nimi vaihdettiin Logic.ts ja näin pystyttiin kirjoittamaan Typescriptiä ja päivittämään jquery.Typescript referenssit myös. Kantaan menee aikaleima AssetLocations kohdalle.

--- a/AssetManagementWeb/AssetManagementWeb/Views/Asset/Test.cshtml
+++ b/AssetManagementWeb/AssetManagementWeb/Views/Asset/Test.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Test";
 }
 @section scripts {
-    <script scr="~/Scripts/Application/Logic.js"></script>
+    <script src="~/Scripts/Application/Logic.js"></script>
 
     <script>
         $(function() {
